# pigeon

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  review-concordance.md  verdict-and-fix.md
.pigeon/: config.yaml
.pigeon/memory/: decisions.md  graph.json
.pigeon/memory/playbooks/: README.md  code-reviewer.md  review-concordance.md  verdict-and-fix.md
.pigeon/memory/sessions/: pillars-complete.md
docs/: MANUAL.md
docs/design/: DESIGN.md  PLAN.md  README.md  measuring-recall.md  review-artifact.md
docs/design/examples/: edit-review-verify.tasks.yaml
docs/design/inputs/army-design/: proposal-gen-deepseek.md  proposal-gen-mimo.md  proposal-gen-north.md  review-concord.md  review-triage.md
docs/design/inputs/roadmap/: concord.md  idea-gen-deepseek.md  idea-gen-mimo.md  triage.md
scripts/: refresh-context.sh
src/pigeon/: __init__.py  agents.py  cli.py  config.py  context.py  coordinate.py  distill.py  graph.py  handoff.py  init.py  manifest.py  mcp_server.py  pack.py  resolve.py  retrieval.py  sessions.py  skills.py  tokens.py  tui.py
src/pigeon/templates/: AGENTS.md  config.yaml  handoff.schema.json
tests/: conftest.py  test_agents.py  test_cli.py  test_context.py  test_contract_dir.py  test_coordinate.py  test_distill.py  test_graph.py  test_handoff.py  test_init.py  test_manifest.py  test_mcp_server.py  test_pack.py  test_phase_d.py  test_resolve.py  test_retrieval.py  test_skills.py  test_tokens.py  test_tui.py
